Closed Bug 362578 Opened 19 years ago Closed 19 years ago

View - Toolbars fails silently in Cocoafox

Categories

(Core :: Widget: Cocoa, defect, P1)

x86
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla1.9alpha2

People

(Reporter: philor, Assigned: asaf)

References

Details

Attachments

(1 file)

Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a1) Gecko/20061201 Firefox/3.0a1 ID:2006120118 STR: In Firefox, click View menu, hover Toolbars submenu item, click either "Navigation Toolbar" or "Bookmarks Toolbar." Expected: toolbar disappears if it's present, or appears if it's hidden. Actual: nothing in the error console, nothing in the console in a debug build, just... nothing happens. Works perfectly in an --enable-default-toolkit=mac build from the same tree.
Flags: blocking1.9?
I traced native events through our cocoa menu/menuitem code and I don't see any problems. It looks like the problem probably exists once the DOM event is sent into content.
*** Bug 363158 has been marked as a duplicate of this bug. ***
Attached patch patchSplinter Review
copied over from the carbon version.
Assignee: joshmoz → mano
Status: NEW → ASSIGNED
Attachment #248014 - Flags: review?(joshmoz)
Priority: -- → P1
Target Milestone: --- → mozilla1.9alpha
Attachment #248014 - Flags: review?(joshmoz) → review+
Attachment #248014 - Flags: superreview?(mikepinkerton)
*** Bug 364193 has been marked as a duplicate of this bug. ***
Attachment #248014 - Flags: superreview?(mikepinkerton) → superreview?(pavlov)
Comment on attachment 248014 [details] [diff] [review] patch sr=pink
Attachment #248014 - Flags: superreview?(pavlov) → superreview+
Checking in widget/src/cocoa/nsMenuItemX.mm; /cvsroot/mozilla/widget/src/cocoa/nsMenuItemX.mm,v <-- nsMenuItemX.mm new revision: 1.21; previous revision: 1.20 done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [19a2]
Status: RESOLVED → VERIFIED
Flags: blocking1.9?
Whiteboard: [19a2]
Target Milestone: mozilla1.9alpha1 → mozilla1.9alpha2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: