Bug 362578 - 'autocheck' doesn't work in cocoa widget menus. r=josh, sr=pinkerton.